k8s/service-node-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: goserver-service
spec:
  selector:
    app: goserver
  type: NodePort
  ports:
  - name: goserver-service
    port: 9000
    targetPort: 8081
    protocol: TCP
    nodePort: 30001
